--- a/.env
+++ b/.env
@@ -1,36 +1,36 @@
 REACT_APP_GOOGLE_CLIENT_ID = 440266627252-k0p7ph2kbqk652r9nic9vf57knrbsvkv.apps.googleusercontent.com
 REACT_APP_GOOGLE_CLIENT_SECRET = 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
-REACT_APP_GET_ALL_USERS_URL = /api/auth/getallusers
-REACT_APP_DELETE_USER_URL = /api/auth/deleteuser
-REACT_APP_CREATE_PRODUCT_URL = /api/product/createproduct
-REACT_APP_GET_ALL_PRODUCT_URL = /api/product/getAllProducts
-REACT_APP_GET_PRODUCT_URL = /api/product/getProduct
-REACT_APP_CREATE_COMMENT_URL = /api/product/createCommment
-REACT_APP_GET_COMMENT_URL = /api/product/getComments
-REACT_APP_Delete_Product = /api/product/deleteProduct
-REACT_APP_UPDATE_PRODUCT_URL = /api/product/editProduct
-REACT_APP_UPDATE_USER_ROLE_URL = /api/auth/UpdateUserRole
-REACT_APP_GET_ALL_ORDER = /api/order/getAllOrders
-REACT_APP_GET_ORDER = /api/order/getOrder
-REACT_APP_UPDATE_ORDER = /api/order/UpdateOrder
+REACT_APP_GET_ALL_USERS_URL = https://onestopshopapi.onrender.com/api/auth/getallusers
+REACT_APP_DELETE_USER_URL = https://onestopshopapi.onrender.com/api/auth/deleteuser
+REACT_APP_CREATE_PRODUCT_URL = https://onestopshopapi.onrender.com/api/product/createproduct
+REACT_APP_GET_ALL_PRODUCT_URL = https://onestopshopapi.onrender.com/api/product/getAllProducts
+REACT_APP_GET_PRODUCT_URL = https://onestopshopapi.onrender.com/api/product/getProduct
+REACT_APP_CREATE_COMMENT_URL = https://onestopshopapi.onrender.com/api/product/createCommment
+REACT_APP_GET_COMMENT_URL = https://onestopshopapi.onrender.com/api/product/getComments
+REACT_APP_Delete_Product = https://onestopshopapi.onrender.com/api/product/deleteProduct
+REACT_APP_UPDATE_PRODUCT_URL = https://onestopshopapi.onrender.com/api/product/editProduct
+REACT_APP_UPDATE_USER_ROLE_URL = https://onestopshopapi.onrender.com/api/auth/UpdateUserRole
+REACT_APP_GET_ALL_ORDER = https://onestopshopapi.onrender.com/api/order/getAllOrders
+REACT_APP_GET_ORDER = https://onestopshopapi.onrender.com/api/order/getOrder
+REACT_APP_UPDATE_ORDER = https://onestopshopapi.onrender.com/api/order/UpdateOrder
 
 #TODO Cart
-REACT_APP_Add_TO_CART = /api/auth/addtocart
-REACT_APP_GET_CART = /api/auth/getcart
-REACT_APP_REMOVE_FROM_CART = /api/auth/removecart
+REACT_APP_Add_TO_CART = https://onestopshopapi.onrender.com/api/auth/addtocart
+REACT_APP_GET_CART = https://onestopshopapi.onrender.com/api/auth/getcart
+REACT_APP_REMOVE_FROM_CART = https://onestopshopapi.onrender.com/api/auth/removecart
 
 REACT_APP_LIMIT = 5
 REACT_APP_PRODUCT_LIMIT = 15
 
 
 # TODO Order
-REACT_APP_MAKE_ORDER = /api/order/makeOrder
-REACT_APP_MY_ORDERS = /api/order/myOrders
+REACT_APP_MAKE_ORDER = https://onestopshopapi.onrender.com/api/order/makeOrder
+REACT_APP_MY_ORDERS = https://onestopshopapi.onrender.com/api/order/myOrders
 
-REACT_APP_GET_KEY = http://localhost:5000/api/order/getKey
-REACT_APP_ONLINE_CHECKOUT = /api/order/checkout
-REACT_APP_ONLINE_ORDER = /api/order/onlineOrder
-REACT_APP_VERIFY_PAYMENT = http://localhost:5000/api/order/verifyPayment
+REACT_APP_GET_KEY = http://localhost:5000https://onestopshopapi.onrender.com/api/order/getKey
+REACT_APP_ONLINE_CHECKOUT = https://onestopshopapi.onrender.com/api/order/checkout
+REACT_APP_ONLINE_ORDER = https://onestopshopapi.onrender.com/api/order/onlineOrder
+REACT_APP_VERIFY_PAYMENT = http://localhost:5000https://onestopshopapi.onrender.com/api/order/verifyPayment
 
 
 #! Cloudinary
