--- a/.env
+++ b/.env
@@ -1,5 +1,23 @@
+# TODO GOOGLE AUTH AND LOGIN
+
 REACT_APP_GOOGLE_CLIENT_ID = 440266627252-k0p7ph2kbqk652r9nic9vf57knrbsvkv.apps.googleusercontent.com
 REACT_APP_GOOGLE_CLIENT_SECRET = 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
+REACT_APP_GOOGLE_VERIFY = https://www.googleapis.com/oauth2/v3/userinfo
+REACT_APP_GOOGLE_AUTH = https://onestopshopapi.onrender.com/api/auth/googleAuth
+
+
+REACT_APP_LOGIN_URL = https://onestopshopapi.onrender.com/api/auth/loginuser
+REACT_APP_REGISTER_URL = https://onestopshopapi.onrender.com/api/auth/registeruser
+
+
+#TODO Cloudinary
+REACT_APP_CLOUDINARY_URL = https://api.cloudinary.com/v1_1/dfxyr6c40/image/upload
+REACT_APP_CLOUDINARY_NAME = dfxyr6c40
+REACT_APP_CLOUDINARY_KEY = 576627717966329
+REACT_APP_CLOUDINARY_SECRET = _7DmMFYk713XBaJzqDNAtHH5jb8
+
+
+
 REACT_APP_GET_ALL_USERS_URL = https://onestopshopapi.onrender.com/api/auth/getallusers
 REACT_APP_DELETE_USER_URL = https://onestopshopapi.onrender.com/api/auth/deleteuser
 REACT_APP_CREATE_PRODUCT_URL = https://onestopshopapi.onrender.com/api/product/createproduct
@@ -18,6 +36,7 @@ REACT_APP_UPDATE_ORDER = https://onestopshopapi.onrender.com/api/order/UpdateOrd
 REACT_APP_Add_TO_CART = https://onestopshopapi.onrender.com/api/auth/addtocart
 REACT_APP_GET_CART = https://onestopshopapi.onrender.com/api/auth/getcart
 REACT_APP_REMOVE_FROM_CART = https://onestopshopapi.onrender.com/api/auth/removecart
+REACT_APP_UPDATE_CART = https://onestopshopapi.onrender.com//api/auth/updatecart
 
 REACT_APP_LIMIT = 5
 REACT_APP_PRODUCT_LIMIT = 15
@@ -33,7 +52,3 @@ REACT_APP_ONLINE_ORDER = https://onestopshopapi.onrender.com/api/order/onlineOrd
 REACT_APP_VERIFY_PAYMENT = http://localhost:5000https://onestopshopapi.onrender.com/api/order/verifyPayment
 
 
-#! Cloudinary
-REACT_APP_CLOUDINARY_NAME = dfxyr6c40
-REACT_APP_CLOUDINARY_KEY = 576627717966329
-REACT_APP_CLOUDINARY_SECRET = _7DmMFYk713XBaJzqDNAtHH5jb8
