--- a/.env
+++ b/.env
@@ -36,7 +36,7 @@ REACT_APP_UPDATE_ORDER = https://onestopshopapi.onrender.com/api/order/UpdateOrd
 REACT_APP_Add_TO_CART = https://onestopshopapi.onrender.com/api/auth/addtocart
 REACT_APP_GET_CART = https://onestopshopapi.onrender.com/api/auth/getcart
 REACT_APP_REMOVE_FROM_CART = https://onestopshopapi.onrender.com/api/auth/removecart
-REACT_APP_UPDATE_CART = https://onestopshopapi.onrender.com//api/auth/updatecart
+REACT_APP_UPDATE_CART = https://onestopshopapi.onrender.com/api/auth/updatecart
 
 REACT_APP_LIMIT = 5
 REACT_APP_PRODUCT_LIMIT = 15
