--- a/.env
+++ b/.env
@@ -18,37 +18,37 @@ REACT_APP_CLOUDINARY_SECRET = _7DmMFYk713XBaJzqDNAtHH5jb8
 
 
 
-REACT_APP_GET_ALL_USERS_URL = https://onestopshopapi.onrender.com/api/auth/getallusers
-REACT_APP_DELETE_USER_URL = https://onestopshopapi.onrender.com/api/auth/deleteuser
-REACT_APP_CREATE_PRODUCT_URL = https://onestopshopapi.onrender.com/api/product/createproduct
-REACT_APP_GET_ALL_PRODUCT_URL = https://onestopshopapi.onrender.com/api/product/getAllProducts
-REACT_APP_GET_PRODUCT_URL = https://onestopshopapi.onrender.com/api/product/getProduct
-REACT_APP_CREATE_COMMENT_URL = https://onestopshopapi.onrender.com/api/product/createCommment
-REACT_APP_GET_COMMENT_URL = https://onestopshopapi.onrender.com/api/product/getComments
-REACT_APP_Delete_Product = https://onestopshopapi.onrender.com/api/product/deleteProduct
-REACT_APP_UPDATE_PRODUCT_URL = https://onestopshopapi.onrender.com/api/product/editProduct
-REACT_APP_UPDATE_USER_ROLE_URL = https://onestopshopapi.onrender.com/api/auth/UpdateUserRole
-REACT_APP_GET_ALL_ORDER = https://onestopshopapi.onrender.com/api/order/getAllOrders
-REACT_APP_GET_ORDER = https://onestopshopapi.onrender.com/api/order/getOrder
-REACT_APP_UPDATE_ORDER = https://onestopshopapi.onrender.com/api/order/UpdateOrder
+REACT_APP_GET_ALL_USERS_URL = http://localhost:5000/api/auth/getallusers
+REACT_APP_DELETE_USER_URL = http://localhost:5000/api/auth/deleteuser
+REACT_APP_CREATE_PRODUCT_URL = http://localhost:5000/api/product/createproduct
+REACT_APP_GET_ALL_PRODUCT_URL = http://localhost:5000/api/product/getAllProducts
+REACT_APP_GET_PRODUCT_URL = http://localhost:5000/api/product/getProduct
+REACT_APP_CREATE_COMMENT_URL = http://localhost:5000/api/product/createCommment
+REACT_APP_GET_COMMENT_URL = http://localhost:5000/api/product/getComments
+REACT_APP_Delete_Product = http://localhost:5000/api/product/deleteProduct
+REACT_APP_UPDATE_PRODUCT_URL = http://localhost:5000/api/product/editProduct
+REACT_APP_UPDATE_USER_ROLE_URL = http://localhost:5000/api/auth/UpdateUserRole
+REACT_APP_GET_ALL_ORDER = http://localhost:5000/api/order/getAllOrders
+REACT_APP_GET_ORDER = http://localhost:5000/api/order/getOrder
+REACT_APP_UPDATE_ORDER = http://localhost:5000/api/order/UpdateOrder
 
 #TODO Cart
-REACT_APP_Add_TO_CART = https://onestopshopapi.onrender.com/api/auth/addtocart
-REACT_APP_GET_CART = https://onestopshopapi.onrender.com/api/auth/getcart
-REACT_APP_REMOVE_FROM_CART = https://onestopshopapi.onrender.com/api/auth/removecart
-REACT_APP_UPDATE_CART = https://onestopshopapi.onrender.com/api/auth/updatecart
+REACT_APP_Add_TO_CART = http://localhost:5000/api/auth/addtocart
+REACT_APP_GET_CART = http://localhost:5000/api/auth/getcart
+REACT_APP_REMOVE_FROM_CART = http://localhost:5000/api/auth/removecart
+REACT_APP_UPDATE_CART = http://localhost:5000/api/auth/updatecart
 
 REACT_APP_LIMIT = 5
 REACT_APP_PRODUCT_LIMIT = 15
 
 
 # TODO Order
-REACT_APP_MAKE_ORDER = https://onestopshopapi.onrender.com/api/order/makeOrder
-REACT_APP_MY_ORDERS = https://onestopshopapi.onrender.com/api/order/myOrders
+REACT_APP_MAKE_ORDER = http://localhost:5000/api/order/makeOrder
+REACT_APP_MY_ORDERS = http://localhost:5000/api/order/myOrders
 
-REACT_APP_GET_KEY = http://localhost:5000https://onestopshopapi.onrender.com/api/order/getKey
-REACT_APP_ONLINE_CHECKOUT = https://onestopshopapi.onrender.com/api/order/checkout
-REACT_APP_ONLINE_ORDER = https://onestopshopapi.onrender.com/api/order/onlineOrder
-REACT_APP_VERIFY_PAYMENT = http://localhost:5000https://onestopshopapi.onrender.com/api/order/verifyPayment
+REACT_APP_GET_KEY = http://localhost:5000/api/order/getKey
+REACT_APP_ONLINE_CHECKOUT = http://localhost:5000/api/order/checkout
+REACT_APP_ONLINE_ORDER = http://localhost:5000/api/order/onlineOrder
+REACT_APP_VERIFY_PAYMENT =http://localhost:5000/api/order/verifyPayment
 
 
