basic bug --handled

--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ REACT_APP_GOOGLE_VERIFY = https://www.googleapis.com/oauth2/v3/userinfo
 REACT_APP_GOOGLE_AUTH = https://onestopshopapi.onrender.com/api/auth/googleAuth
 
 
-REACT_APP_LOGIN_URL = https://onestopshopapi.onrender.com/api/auth/loginuser
-REACT_APP_REGISTER_URL = https://onestopshopapi.onrender.com/api/auth/registeruser
+REACT_APP_LOGIN_URL =  http://localhost:5000/api/auth/loginuser
+REACT_APP_REGISTER_URL =  http://localhost:5000/api/auth/registeruser
 
 
 #TODO Cloudinary
